# CMakeList.txt : CMake project for CppCoursera, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CppCoursera")

# Add source to this project's executable.
add_executable (CppCoursera "CppCoursera.cpp" "CppCoursera.h")

# TODO: Add tests and install targets if needed.
